@@ -47,6 +47,10 @@ Release 1.15.4 [PENDING]
   * Bugfix: fixed an issue in Safelist.removeAttributes which could throw a ConcurrentModificationException when using
     the ":all" pseudo-attribute.
 
+  * Bugfix: given extremely deeply nested HTML, a number of methods in Element could throw a StackOverflowError due
+    to excessive recursion. Namely: #data(), #hasText(), #parents(), and #wrap(html).
+    <https://github.com/jhy/jsoup/issues/1864>
+
   * Change: deprecated the unused Document#normalise() method. Normalization occurs during the HTML tree construction,
     and no longer as a distinct phase.
 
